--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.3",
@@ -35,7 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.33",
     "prettier": "^3.0.0",
-    "react-router-dom": "^6.21.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.4"
